--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
+ @import url("style/header.css");
+
 :root{
     --cor-de-fundo: #EBECEE;
 }
 body{
     background-color: var(--cor-de-fundo);
 }
-h1{
-    background-color: #fff;
-}
+
