--- a/header.css
+++ b/header.css
@@ -57,12 +57,22 @@
     display: none;
 }
  
+.container__título{
+    display: none;
+}
+.opções{
+    display: none;
+}
 
 @media screen and (min-width: 1024px) {
     .container__título,
     .container__título--negrito {
         font-family: var(--fonte-secundario);
         font-size: 30px;
+    }
+    .container__título{
+        font-weight: 400;
+        display: block;
     }
 
     .container__título{
@@ -73,4 +83,30 @@
     .container__título--negrito{
         font-weight: 700;
     }
+.opções{
+    display: flex;
 }
+.opções__item{
+    padding: 0 1em;
+    text-transform: uppercase;
+}
+.opções__link{
+    text-decoration: none;
+    color: var(--cor-preto);
+}
+
+.container__imagem-transparente{
+    display: none;
+}
+.cabecalho__menu-hamburguer{
+    display: none;
+}
+.opções__botão:checked~.lista-menu{
+    display: block;
+    width: auto;
+}
+.opções__botão{
+    display: none;
+}
+}
+
